feat: implement OAuth2 authentication with Google and GitHub
- Add spring-boot-starter-oauth2-client dependency
- Configure Google and GitHub OAuth2 providers in application.yml
- Create OAuth2SuccessHandler for JWT generation after OAuth login
- Add findOrCreateOAuthUser method in AuthService
- Create TenantRepository for default tenant creation
- Add oauth_provider and oauth_id columns to users table (V7 migration)
- Update User domain, UserEntity, and UserMapper with OAuth fields
- Update AdminConfig with OAuth2 login and CORS for frontend